--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:rgba(249,247,244,1)
+  background-color:rgba(249,247,244,1);
+  margin-bottom: 50px;
 }
 
 code {
