fav icon background color to match background of page

--- a/client/src/styling/NavBar.css
+++ b/client/src/styling/NavBar.css
@@ -1,9 +1,9 @@
 .nav {
-  background-color: rgba(244,241,234,1)
+  background-color: rgb(244, 237, 221)
 }
 
 .upperNav {
-  background-color:rgba(234,208,173,1);
+  background-color:rgb(237, 217, 190);
 }
 
 
