--- a/client/src/styling/ProductCard.css
+++ b/client/src/styling/ProductCard.css
@@ -1,6 +1,6 @@
 .card-img {
   height: 150px;
-  border: 3px solid rgba(0,0,0,0.5);
+  border: 3px solid rgba(0, 0, 0, 0.5);
 }
 
 .card-quantity {
@@ -37,4 +37,3 @@
   flex-wrap: wrap;
   justify-content: center;
 }
-
