moved Signed in to right

--- a/client/src/styling/NavBar.css
+++ b/client/src/styling/NavBar.css
@@ -18,9 +18,9 @@
   display: flex;
   flex-direction: row;
   float: left;
-  width: 50%;
+  width: 25%;
   justify-content: space-around;
-  /* margin-bottom: 25px; */
+  
 }
 
 .nav a:hover {
@@ -41,4 +41,9 @@
 
 .search-bar {
   padding: 60px 0 15px 0; 
+}
+
+.logged-in {
+  /* background: yellow; */
+  text-align: right;
 }
