--- a/client/src/styling/AddBook.css
+++ b/client/src/styling/AddBook.css
@@ -57,12 +57,13 @@
 }
 
 i {
-  background-color: rgb(255, 230, 0);
+  background-color: rgb(237, 217, 190);
   padding: 6px 10px 6px 10px;
-  border-radius: 0 5px 5px 0;
+  border-radius: 3px;
   color: #424242;
+  cursor: pointer;
 }
 
-dept {
-  border-radius: 5px 0 0 5px;
+i:hover {
+  background-color: rgb(206, 171, 125);
 }
