--- a/client/src/styling/DetailsPage.css
+++ b/client/src/styling/DetailsPage.css
@@ -1,19 +1,28 @@
-.book-container, .buy-book-container, .review-container, .review-form-container {
+.book-container,
+.buy-book-container,
+.review-container,
+.review-form-container {
   display: flex;
   border-bottom: 0.8px solid lightgrey;
 }
 
-.book-title, .book-author, .book-description, .book-publisher, .book-rating {
+.book-title,
+.book-author,
+.book-description,
+.book-publisher,
+.book-rating {
   text-align: left;
 }
 
-div {
+.details-page-cont {
   padding: 8px;
 }
 
 .book-image {
   height: 300px;
   border: 3px solid rgba(0, 0, 0, 0.5);
+  margin-right: 8px;
+  margin-bottom: 8px;
 }
 
 .book-title {
